--- a/track/templates/track/ctgs_types_train.html
+++ b/track/templates/track/ctgs_types_train.html
@@ -19,7 +19,7 @@
             </tr>
             {% for x in categs %}
             <tr id="tr{{ forloop.counter }}" onclick="
-            clearThenAppendRows({{ x.TrTYP }})
+            showMassesSost({{ x.TrTYP }})
             ">
                 <td>{{ x.CatgNam }}</td>
                 <td>{{ mGput }}</td>
