--- a/kortes/templates/kortes/base.html
+++ b/kortes/templates/kortes/base.html
@@ -1,55 +1,58 @@
 {% load static %}<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}
-        {% endblock %}</title>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/general.css' %}" rel="stylesheet">
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{% block title %}
+    {% endblock %}</title>
+  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/general.css' %}{{cache_key}}" rel="stylesheet">
+  <link href="{% static 'kortes/uchastk/k2css.css' %}{{cache_key}}" rel="stylesheet">
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
 <div class="container">
+  <div class="shapka">{% block shapka %}{% endblock %}</div>
     {% block content %}
     {% endblock %}
 </div>
 
 <div class="modal" id="myModal">
-    <div class="modal-dialog" style="max-width: 95vw; max-height: 20%">
-        <div class="modal-content">
+  <div class="modal-dialog" style="max-width: 95vw; max-height: 20%">
+    <div class="modal-content">
 
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">
-                    {% block modal_title %}
-                    Modal Header
-                    {% endblock %}
-                </h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">
+          {% block modal_title %}
+          Modal Header
+          {% endblock %}
+        </h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
 
-            <!-- Modal body -->
-            <div class="modal-body" style="max-height: 72vh; overflow: scroll">
-                {% block modal_body %}
-                <iframe style="height: 62vh; width: 91vw;"></iframe>
-                {% endblock %}
-            </div>
+      <!-- Modal body -->
+      <div class="modal-body" style="max-height: 72vh; overflow: scroll">
+        {% block modal_body %}
+        <iframe style="height: 62vh; width: 91vw;"></iframe>
+        {% endblock %}
+      </div>
 
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
 
-        </div>
     </div>
+  </div>
 </div>
-<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>  <!-- JQUERY HERE -->
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/general.js' %}{{ cache_key }}"></script>
 {% block javascript %}
 {% endblock %}
 </body>
