--- a/veip/templates/veip/base.html
+++ b/veip/templates/veip/base.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}
         {% endblock %}</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'veip/veip.css' %}{{cache_key}}" rel="stylesheet">
+    <link href="{% static 'css/general.css' %}{{cache_key}}" rel="stylesheet">
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -17,8 +21,11 @@
       {% block content %}
       {% endblock %}
     </div>
-    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>  <!-- JQUERY HERE -->
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/general.js' %}{{cache_key}}"></script>
+    <script>
+    </script>
     {% block javascript %}
     {% endblock %}
   </body>
