--- a/veip/templates/veip/multiVar.html
+++ b/veip/templates/veip/multiVar.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+function multiVarInit(div){
+  let ul = $('<ul/>', {
+    class: 'some-class',
+    title: 'now this div has a title!',
+    ondblclick: ''
+  });
+
+}
